# inherent

./: .gitignore  AUDIO_COLLECTION.md  README.md  pyproject.toml
configs/: base.yaml  baseline.yaml  fixture_quality.yaml  high_performance_local.yaml  production.yaml  production_local.yaml  production_local_shard_a.yaml  production_local_shard_b.yaml  production_quality.yaml  quality_eval_mini.yaml  smoke.yaml  synthetic_person_event.yaml  synthetic_person_event_remote.yaml  synthetic_person_event_slice.yaml
contracts/: runtime_contract.md
docs/: android-accelerator-backends.md  index.html  synthetic_tts_remote.md
docs/assets/: inherent.onnx  inherent.onnx.metadata.json
docs/browser-demo/: README.md  app.js  index.html  styles.css
scripts/: ec2_integrate_person_event.sh  finish_production_person_event.sh  run_synthetic_remote.sh  train_eval_person_event.sh
src/inherent/: __init__.py  config.py
src/inherent/data/: __init__.py  directedness.py  fixture_manifest.py  intents.py  labeling.py  manifest.py  mic_augment.py  schema.py  synthesis.py  tts_engines.py
src/inherent/eval/: evaluate.py  fixture_quality.py  parity.py  thresholds.py
src/inherent/export/: __init__.py  core.py  litert.py  litertlm.py  mlx.py  (+4 more)
tests/: test_architecture.py  test_browser_demo_static.py  test_config_data_contract.py  test_contract.py  test_directedness.py  test_eval_gates.py  test_export_backends.py  test_export_tflite.py  test_finalize_synthetic_slice.py  test_fixture_manifest.py  test_fixture_quality.py  test_frontend.py  test_labeling.py  test_mic_augment.py  test_public_intents.py  test_recorded_pipeline.py  test_remaining_stubs.py  test_synthesis.py  test_training_dataset.py  test_tts_engines.py
(+18 files in other folders)
