[project]
name = "inherent"
version = "0.1.0"
description = "CPU-deployable joint audio→intent classifier for the genesis ambient assistant"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4",
    "torchaudio>=2.4",
    "datasets>=3.0,<4.0",
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.26,<2.3",
    "scipy>=1.13",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "scikit-learn>=1.5",
    "tensorflow>=2.17,<2.21",
    "tf-keras>=2.17,<2.21",
    "ai-edge-litert>=2.0",
    "onnx>=1.17",
    "onnxscript>=0.5",
    "onnx-graphsurgeon>=0.5",
    "onnxruntime>=1.19",
    "onnx2tf>=1.22",
    "sng4onnx>=1.0",
]

[project.optional-dependencies]
tts = [
    # CLI runner only; set INHERENT_OPENF5_MODEL=mrfakename/OpenF5-TTS-Base
    # or a vetted local OpenF5 path before synthesis. OpenVoice/CosyVoice voice
    # references are external data inputs, not installed through this package.
    "f5-tts>=0.6",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
inherent-prep-data = "inherent.scripts.prep_data:main"
inherent-labels = "inherent.scripts.labels:main"
inherent-train = "inherent.scripts.train:main"
inherent-eval = "inherent.scripts.eval:main"
inherent-export = "inherent.scripts.export:main"
inherent-fixtures = "inherent.scripts.fixtures:main"
inherent-fixture-quality = "inherent.eval.fixture_quality:main"
inherent-parity = "inherent.eval.parity:main"
inherent-thresholds = "inherent.eval.thresholds:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inherent"]
